# hyperlane

./: .gitignore  COMPLETION_SUMMARY.md  DEVELOPMENT.md  INDEX.md  PROJECT_STATUS.md  PYPI_IMPLEMENTATION_STEPS.md  PYPI_UPLOAD_GUIDE.md  PYPI_UPLOAD_READINESS.md  QUICK_REFERENCE.md  README.md  WHEEL_BUILDING_GUIDE.md  WHEEL_BUILD_SUMMARY.txt  build.sh  build_wheels_local.sh  example_inference.py  requirements.txt  setup_env.sh  test_wheels.sh  tests.py  upload_wheels.sh
.github/workflows/: build-wheel.yml  ci.yml
hyperlane_client/: generate_grpc.py  setup.py
hyperlane_client/hyperlane_client/: __init__.py  discovery.py  grpc_client.py  orchestrator.py
hyperlane_client/pybind/: CMakeLists.txt  tensor_socket.cpp  tensor_socket.h  tensor_socket.py
hyperlane_worker/: CMakeLists.txt
hyperlane_worker/include/: cuda_ops.h  onnx_session.h  service_impl.h  tensor_receiver.h  tensor_sender.h  worker.h
hyperlane_worker/src/: cuda_ops.cu  main.cc  onnx_session.cc  service_discovery.cc  service_impl.cc  tensor_receiver.cc  tensor_sender.cc  worker.cc
proto/: service.proto
